--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         </div>
     </section>
 
-
     <section class="menu" id="menu">
         <div class="heading">
             <h3>Notre sélection</h3>
@@ -76,45 +75,13 @@
         </div>
     </section>
 
-    <section class="team" id="team">
-        <div class="heading">
-            <h3>Restaurant Partenaire</h3>
-        </div>
-        <div class="box-container">
-            <div class="box">
-                <img src="images/restaurant-1.jpeg" alt="">
-                <h3>Délice de Condorcet</h3>
-            </div>
-            <div class="box">
-                <img src="images/restaurant-2.jpeg" alt="">
-                <h3>Osè African Cuisine Château d'Eau</h3>
-            </div>
-            <div class="box">
-                <img src="images/restaurant-3.jpg" alt="">
-                <h3>Shalimar</h3>
-            </div>
-            <div class="box">
-                <img src="images/restaurant-4.jpeg" alt="">
-                <h3>Cheesers</h3>
-            </div>
-            <div class="box">
-                <img src="images/restaurant-5.jpg" alt="">
-                <h3>Les Rupins</h3>
-            </div>
-            <div class="box">
-                <img src="images/restaurant-6.jpg" alt="">
-                <h3>Sens Uniques</h3>
-            </div>
-        </div>
-    </section>
-
     <section class="contact" id="contact">
         <div class="heading">
             <h3>Formulaire d'inscription</h3>
         </div>
         <div class="row">
             <div class="image">
-                <img src="contact-img.png" alt="">
+                <img src="img/contact-img.png" alt="">
             </div>
             <form action="" method="post">
                 <h3>Inscription</h3>
@@ -148,6 +115,6 @@
         </div>
         <div class="credit ">&copy; Copyright @2022 By <span>Litopia</span> | All Rights Reserved</div>
     </section>
-    <script src=" script.js "></script>
+    <script src="script.js "></script>
 </body>
 </html>
