--- a/index.html
+++ b/index.html
@@ -48,30 +48,18 @@
             <h3>Notre sélection</h3>
         </div>
         <div class="box-container">
-            <div class="box">
-                <img src="images/menu-1.avif" alt="">
-                <h3>Burger</h3>
-            </div>
-            <div class="box">
-                <img src="images/menu-2.avif" alt="">
-                <h3>Salade</h3>
-            </div>
-            <div class="box">
-                <img src="images/menu-3.avif" alt="">
-                <h3>Poulet Roti</h3>
-            </div>
-            <div class="box">
-                <img src="images/menu-4.avif" alt="">
-                <h3>Brochettes</h3>
-            </div>
-            <div class="box">
-                <img src="images/menu-5.avif" alt="">
-                <h3>Poulet Frit</h3>
-            </div>
-            <div class="box">
-                <img src="images/menu-6.avif" alt="">
-                <h3>Friture</h3>
-            </div>
+            <a href="/ebooks/les-miserables.html" class="box-a">
+                <img src="./img/les-miserables.jpg" alt="">
+                <div class="overlay"><h3>Les Misérables</h3></div>
+            </a>
+            <a href="/ebooks/la-societe-du-spectacle.html" class="box-a">
+                <img src="./img/spec.jpg" alt="">
+                <div class="overlay"><h3>La Société du Spectacle</h3></div>
+            </a>
+            <a href="/ebooks/ainsi-parlait-zarathoustra.html" class="box-a">
+                <img src="./img/ainsi.jpg" alt="">
+                <div class="overlay"><h3>Ainsi Parlait Zarathoustra</h3></div>
+            </a>
         </div>
     </section>
 
