--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
             <h3>Notre sélection</h3>
         </div>
         <div class="box-container">
-            <a href="/ebooks/les-miserables.html" class="box-a">
+            <a href="./ebooks/les-miserables.html" class="box-a">
                 <img src="./img/les-miserables.jpg" alt="">
                 <div class="overlay"><h3>Les Misérables</h3></div>
             </a>
-            <a href="/ebooks/la-societe-du-spectacle.html" class="box-a">
+            <a href="./ebooks/la-societe-du-spectacle.html" class="box-a">
                 <img src="./img/spec.jpg" alt="">
                 <div class="overlay"><h3>La Société du Spectacle</h3></div>
             </a>
-            <a href="/ebooks/ainsi-parlait-zarathoustra.html" class="box-a">
+            <a href="./ebooks/ainsi-parlait-zarathoustra.html" class="box-a">
                 <img src="./img/ainsi.jpg" alt="">
                 <div class="overlay"><h3>Ainsi Parlait Zarathoustra</h3></div>
             </a>
