--- a/ebooks/ainsi-parlait-zarathoustra.html
+++ b/ebooks/ainsi-parlait-zarathoustra.html
@@ -21,9 +21,9 @@
     <!-- End Google Tag Manager (noscript) -->
     <header class="header">
         <section class="flex">
-            <a href="/" class="logo"><img src="../img/logo.png" alt=""></a>
+            <a href="../index.html#home" class="logo"><img src="../img/logo.png" alt=""></a>
             <nav class="navbar">
-                <a href="/">Accueil</a>
+                <a href="../index.html#home">Accueil</a>
             </nav>
 
             <div id="menu-btn" class="fas fa-bars"></div>
