--- a/ebooks/ainsi-parlait-zarathoustra.html
+++ b/ebooks/ainsi-parlait-zarathoustra.html
@@ -24,6 +24,7 @@
             <a href="../index.html#home" class="logo"><img src="../img/logo.png" alt=""></a>
             <nav class="navbar">
                 <a href="../index.html#home">Accueil</a>
+                <a href="../index.html#contact">Inscription</a>
             </nav>
 
             <div id="menu-btn" class="fas fa-bars"></div>
