--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="box ">
                 <i class="fas fa-envelope "></i>
                 <h3>Email</h3>
-                <p>@gmail.com</p>
+                <p>Litopia@gmail.com</p>
             </div>
             <div class="box ">
                 <i class="fas fa-clock "></i>
