--- a/selection/index.html
+++ b/selection/index.html
@@ -36,7 +36,7 @@
 
     <section class="menu" id="menu">
         <div class="heading">
-            <h3>Votre sélection Personnalisé</h3>
+            <h3>Votre sélection Personnalisée</h3>
         </div>
         <div class="box-container">
             <a href="../ebooks/les-miserables.html" class="box-a">
@@ -47,9 +47,9 @@
                 <img src="../img/spec.jpg" alt="">
                 <div class="overlay"><h3>La Société du Spectacle</h3></div>
             </a>
-            <a href="../ebooks/ainsi-parlait-zarathoustra.html" class="box-a">
-                <img src="../img/ainsi.jpg" alt="">
-                <div class="overlay"><h3>Ainsi Parlait Zarathoustra</h3></div>
+            <a href="../ebooks/lorem-ipsum.html" class="box-a">
+                <img src="../img/lorem-ipsum.jpg" alt="">
+                <div class="overlay"><h3>Lorem ipsum: The complete book</h3></div>
             </a>
         </div>
     </section>
