--- a/mail/html/weeklySelection/weekly-selection.html
+++ b/mail/html/weeklySelection/weekly-selection.html
@@ -213,9 +213,9 @@
                                       <td style="padding: 10px;"><a href="https://azntufu.github.io/Litopia/ebooks/la-societe-du-spectacle.html">Emprunter</a></td>
                                     </tr>
                                     <tr style="border-bottom:1px solid #ecedee;text-align:left;" mj-for="book in books">
-                                      <td style="padding: 10px;">Ainsi Parlait Zarathoustra</td>
-                                      <td style="padding: 10px;">Friedrich Nietzsche</td>
-                                      <td style="padding: 10px;">Roman / Poésie</td>
+                                      <td style="padding: 10px;">Lorem ipsum: The complete book</td>
+                                      <td style="padding: 10px;">Lucio Martinez V.</td>
+                                      <td style="padding: 10px;">Lorem / Ipsum</td>
                                       <td style="padding: 10px;"><a href="https://azntufu.github.io/Litopia/ebooks/ainsi-parlait-zarathoustra.html">Emprunter</a></td>
                                     </tr>
                                   </table>
