:white_check_mark: weekly selection mail

--- a/mail/html/weeklySelection/weekly-selection.html
+++ b/mail/html/weeklySelection/weekly-selection.html
@@ -274,7 +274,7 @@
                                     <tbody>
                                       <tr>
                                         <td align="center" bgcolor="#be9c79" role="presentation" style="border:none;border-radius:3px;cursor:auto;mso-padding-alt:10px 25px;background:#be9c79;" valign="middle">
-                                          <a href="https://azntufu.github.io/Litopia/selection" style="display:inline-block;background:#be9c79;color:#ffffff;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;font-size:17px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> Mes recommandés </a>
+                                          <a href="https://azntufu.github.io/Litopia/selection?utm_source=newsletter&utm_medium=email&utm_campaign=selection" style="display:inline-block;background:#be9c79;color:#ffffff;font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;font-size:17px;font-weight:bold;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:10px 25px;mso-padding-alt:0px;border-radius:3px;" target="_blank"> Mes recommandés </a>
                                         </td>
                                       </tr>
                                     </tbody>
